OpenApiSecurity and Auth implemented
